wither_derive/tests/fail/field-id-incorrect-type.stderr
error[E0308]: mismatched types
 --> tests/fail/field-id-incorrect-type.rs:4:34
  |
4 | #[derive(Serialize, Deserialize, Model)]
  |                                  ^^^^^
  |                                  |
  |                                  expected struct `wither::bson::oid::ObjectId`, found struct `std::string::String`
  |                                  expected `std::option::Option<wither::bson::oid::ObjectId>` because of return type
  |
  = note: expected enum `std::option::Option<wither::bson::oid::ObjectId>`
             found enum `std::option::Option<std::string::String>`
  = note: this error originates in the derive macro `Model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/fail/field-id-incorrect-type.rs:4:34
  |
4 | #[derive(Serialize, Deserialize, Model)]
  |                                  ^^^^^- help: try using a conversion method: `.to_string()`
  |                                  |
  |                                  expected struct `std::string::String`, found struct `wither::bson::oid::ObjectId`
  |
  = note: this error originates in the derive macro `Model` (in Nightly builds, run with -Z macro-backtrace for more info)
